--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,17 +36,16 @@ dist.jlink.output=${dist.jlink.dir}/PUNTO_DE_VENTA
 endorsed.classpath=\
     ${libs.JAX-WS-ENDORSED.classpath}
 excludes=
-file.reference.AnimatonClass.jar=AnimatonClass.jar
-file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
-file.reference.postgresql-42.3.3.jar=postgresql-42.3.3.jar
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
+file.reference.AnimatonClass.jar=lib/AnimatonClass.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.postgresql-42.3.3.jar}:\
+    ${libs.metro.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${libs.metro.classpath}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
